# mcp-git

./: .env.example  .gitignore  .mcp-simple.json  .mcp.json.example  .pre-commit-config.yaml  AG_COMMANDS_ENHANCEMENT_SUMMARY.md  BUG_FIX_SUMMARY.md  CHERRY_PICK_LIST.md  CLAUDE.local.md  Dockerfile  ENHANCEMENTS.md  ENHANCEMENT_DOCUMENTATION.md  GITHUB_INTEGRATION_PLAN.md  GITHUB_USAGE.md  MCP_SERVER_CONFIG.md  MCP_TOOL_PREFERENCE_GUIDE.md  PORCELAIN_FORMAT_ENHANCEMENT.md  README.md  SECURITY.md  debug_environment_test.py  mcp-server-git-simple  pyproject.toml  test_fix.py  test_github_write_ops.py  test_mcp_git.txt  test_simple_server.py  transport_fix_test.txt
.aider/: chat_history.md
.claude/: commands  hooks  settings.json
.claude/commands/: AG_fix_CI.md  AG_next_task.md  AG_priming.md  AG_update_development.md
.github/: README.md
.github/scripts/: verify_mcp_e2e.py
.github/workflows/: ci.yml  nightly.yml  release.yml
.taskmaster/: session-data.json  session-notebook-guide.md  session-notebook.md  test-status-README.md  test-status.json  uckn-export-20250703_112802.json
.taskmaster/docs/: TDD_CI_STRATEGY.md
data/: sessions.json
docs/: API_REFERENCE.md  TECHNICAL_ARCHITECTURE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
examples/: prompt_usage.md
scripts/: session_notebook.py  test_runner.py  test_status_manager.py  validate_mcp_behavior.py
src/mcp_server_git/: __init__.py  error_handling.py  logging_config.py  metrics.py  optimizations.py  server.py  server_modular.py  server_simple.py  server_v2.py  session.py
src/mcp_server_git/applications/: __init__.py
src/mcp_server_git/configuration/: __init__.py
src/mcp_server_git/constants/: __init__.py
src/mcp_server_git/core/: __init__.py  handlers.py  notification_interceptor.py  prompts.py  tools.py
src/mcp_server_git/debugging/: __init__.py
src/mcp_server_git/frameworks/: __init__.py
src/mcp_server_git/git/: __init__.py  models.py  operations.py  security.py
src/mcp_server_git/github/: __init__.py  api.py  cli.py  client.py  models.py
src/mcp_server_git/models/: __init__.py  enhanced_validation.py  middleware.py  notifications.py  validation.py
src/mcp_server_git/operations/: __init__.py
src/mcp_server_git/primitives/: __init__.py
src/mcp_server_git/protocols/: __init__.py  debugging_protocol.py  metrics_protocol.py  notification_protocol.py  repository_protocol.py
src/mcp_server_git/services/: __init__.py
src/mcp_server_git/src/mcp_server_git/protocols/: __init__.py  debugging_protocol.py  metrics_protocol.py  notification_protocol.py  repository_protocol.py
src/mcp_server_git/types/: __init__.py
taskmaster_backup/docs/: prd.txt
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json
tests/: README.md  __init__.py  conftest.py  test_circuit_breaker.py  test_e2e_server.py  test_environment_loading.py  test_error_handling.py  test_extended_notifications.py  test_graceful_shutdown.py  test_heartbeat.py  test_logging_and_metrics.py  test_mcp_verification_e2e.py  test_server.py  test_session.py
tests/benchmarks/: conftest.py  test_optimization_validation.py  test_performance.py
tests/fixtures/: __init__.py  git_repos.py  github_responses.py  mcp_messages.py
tests/integration/: README.md  conftest.py  test_protocol_compliance.py  test_stability.py
tests/stress/: __init__.py  conftest.py  test_concurrent.py  test_error_injection.py  test_long_running.py  test_memory_leaks.py
tests/system/: README.md
tests/unit/: README.md
tests/unit/types/: README.md  __init__.py  test_composite_types.py  test_git_types.py  test_github_types.py  test_mcp_types.py  test_validation_types.py
